# sap-bdc-snowflake-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  streamlit_app.py
docs/: CONVERSION.md  SAP_BDC_Snowflake_MCP_How_To_Use.docx
src/sap_bdc_snowflake_mcp/: __init__.py  config.py  connector_tools.py  csn_builder.py  datasphere_client.py  diagnostics_tools.py  metadata_tools.py  server.py  snowflake_client.py  validation_tools.py
tests/: test_tools.py
