[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-bdc-snowflake-mcp-server"
version = "0.1.0"
description = "MCP server for SAP Business Data Cloud (BDC) integration on Snowflake via the SAP BDC Connect zero-copy connector. 17 tools: provisioning, validation, share/data-product management, SAP-Note diagnostics, ORD/CSN metadata. A Snowflake port of Mario DeFelipe's Databricks sap-bdc-mcp-server."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Ported to Snowflake — see NOTICE"},
]

dependencies = [
    "mcp>=1.0.0",
    "snowflake-connector-python>=3.12",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
sap-bdc-snowflake-mcp = "sap_bdc_snowflake_mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]
